ray: [web-src] reduce fd-is-fullheight to avoid problem with iphone cutting off buttons

--- a/web-src/src/mystyles.css
+++ b/web-src/src/mystyles.css
@@ -50,7 +50,7 @@ a.navbar-item {
 }
 
 .fd-is-fullheight {
-  height: calc(100vh - 3.25rem - 3.25rem);
+  height: calc(100vh - 8rem);
 }
 
 .fd-is-fullheight-body {
